--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Mars8377.GitHub.io by mars8377</title>
+    <title>Welcome to the Tableau page flipper!</title>
   </head>
 
   <body>
