--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-          <h1>Mars8377.GitHub.io</h1>
+          <h1>Welcome to the Tableau page flipper!</h1>
           <h2>Page test</h2>
         </header>
 
