--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         {"src": "https://public.tableausoftware.com/views/Animated-Map/map?:showVizHome=no&:embed=yes&:toolbar=no&:format=png&Year=2013"},
         */
         {"src": "http://tableau.corp.web/#/site/Gale/views/Book1/Dashboard3?:iid=1&:embed=yes&:toolbar=no&:format=png&<YEAR(Order Date)>=2014"},
-        
+        {"src": "http://tableau.corp.web/#/site/Gale/views/Book1/Dashboard3?:iid=1&:embed=yes&:toolbar=no&:format=png&<YEAR(Order Date)>=2013"},
                 ]
             
       $("#myGallery").attr('width',width);
