--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         {"src": "https://public.tableausoftware.com/views/Animated-Map/map?:showVizHome=no&:embed=yes&:toolbar=no&:format=png&Year=2012"},
         {"src": "https://public.tableausoftware.com/views/Animated-Map/map?:showVizHome=no&:embed=yes&:toolbar=no&:format=png&Year=2013"},
         */
-        {"src": "https://tableau.corp.web/#/site/Gale/views/Book1/Sheet9?:iid=3&:embed=yes&:toolbar=no&:format=png&YEAR(Order Date)=All"},
-        {"src": "https://tableau.corp.web/#/site/Gale/views/Book1/Sheet9?:iid=3&:embed=yes&:toolbar=no&:format=png&YEAR(Order Date)=2012"},
-        {"src": "https://tableau.corp.web/#/site/Gale/views/Book1/Sheet9?:iid=3&:embed=yes&:toolbar=no&:format=png&YEAR(Order Date)=2013"},
-        {"src": "https://tableau.corp.web/#/site/Gale/views/Book1/Sheet9?:iid=3&:embed=yes&:toolbar=no&:format=png&YEAR(Order Date)=2014"},
+        {"src": "https://tableau.corp.web/#/site/Gale/views/Book1/Sheet9?:iid=3&:embed=yes&:toolbar=no&:format=png&YEAR=All"},
+        {"src": "https://tableau.corp.web/#/site/Gale/views/Book1/Sheet9?:iid=3&:embed=yes&:toolbar=no&:format=png&YEAR=2012"},
+        {"src": "https://tableau.corp.web/#/site/Gale/views/Book1/Sheet9?:iid=3&:embed=yes&:toolbar=no&:format=png&YEAR=2013"},
+        {"src": "https://tableau.corp.web/#/site/Gale/views/Book1/Sheet9?:iid=3&:embed=yes&:toolbar=no&:format=png&YEAR=2014"},
         
                 ]
             
