--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-src='http://myserver/javascripts/api/viz_v1.js'></script>
+<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   </script>
   <script>    
     
